<resources>
    <string name="app_name">Movimente-se!</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="label_nova_senha">Esqueçeu a senha?</string>
    <string name="action_sign_in">Entrar</string>

    <string name="action_cadastrar">Cadastrar</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Strings related to Cadastro -->
    <string name="lblNovocadastro">Não possui uma conta? <b>Cadastre-se</b></string>
    <string name="lblCadastroNome">Nome</string>
    <string name="lblCadastroDtNascimento">Data de nascimento</string>
    <string name="lblCadastroGenero">Gênero</string>
    <string name="lblCadastroAltura">Altura</string>
    <string name="lblCadastroCelular">Celular</string>
    <string name="lblCadastroEmail">E-mail</string>
    <string name="lblCadastroSenha">Senha</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add_alarm">Add Alarm</string>
    <string name="add_alarm_confirm_subtitle">Confirm data and add alarm</string>
    <string name="new_alarm_added">New alarm added successfully</string>
    <string name="error_alarm_name_min_characters">At least %1$d character(s)</string>
    <string name="error_alarm_days_min_days">At least 1 day must be selected</string>
    <string name="main_activity_alarm_added_info">Recurring alarm %s set up at %s</string>
    <string name="main_activity_explanation">Click the button to set up a new alarm</string>
    <string name="main_activity_explanation_disclaimer">Don\'t worry, this app does not actually set up alarms.</string>
    <string name="form_hint_title">Alarm name (required)</string>
    <string name="form_hint_description">Alarm description (optional)</string>
    <string name="form_discard_question">Discard alarm?</string>
    <string name="form_info_will_be_lost">All the information about this new alarm will be lost</string>
    <string name="form_confirm_button">Add alarm</string>
    <string name="form_sending_data_message">Adding new alarm…</string>
    <string name="form_discard_cancel">Cancel</string>
    <string name="form_discard">Discard</string>
    <string name="form_empty_field">(Empty)</string>
    <string-array name="steps_titles">
        <item>Name</item>
        <item>Description</item>
        <item>Time</item>
        <item>Week schedule</item>
    </string-array>
    <string-array name="steps_subtitles">
        <item>Name of the alarm</item>
        <item>Description of the alarm</item>
        <item>Time when the alarm will go off</item>
        <item>Week schedule of the alarm</item>
    </string-array>
    <string-array name="week_days">
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
        <item>S</item>
    </string-array>
    <string-array name="week_days_extended">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>
